[package]
name = "pho"
version = "1.0.2"
edition = "2021"
documentation = "https://docs.rs/pho"
description = "PHOnetic alphabet renderer"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive", "env", "unicode", "string", "wrap_help"] }
wasm-bindgen = "0.2.86"


[lib]
name = "pho"
path = "src/lib.rs"

[[bin]]
name = "pho"
path = "src/main.rs"
bench = false
