[package]
name = "pho"
version = "1.0.2"
edition = "2021"
documentation = "https://docs.rs/pho"
description = "PHOnetic alphabet renderer"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/gabrielfalcao/pho"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.2", features = ["derive", "env", "unicode", "string", "wrap_help"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.86"
wee_alloc = "0.4.5"


[lib]
crate-type = ["cdylib", "rlib"]
name = "pho"
path = "src/lib.rs"

[[bin]]
name = "pho"
path = "src/main.rs"
bench = false

[dev-dependencies]
wasm-bindgen-test = { version = "0.3.37", features = ["gg-alloc"] }
